kustomization/base/web/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nvideo-web
  labels:
    needs-pull-secret: private
spec:
  selector:
    matchLabels:
      app: nvideo-web
  replicas: 1
  template:
    metadata:
      labels:
        app: nvideo-web
    spec:
      nodeSelector:
        main-ingress: "true"
      containers:
      - name: nvideo-web
        image: nvideo-web-image-name-placeholder # kustomize
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        resources:
          requests:
            memory: 128Mi
      imagePullSecrets:
      - name: registry-secret-name-placeholder # kustomize
