kustomization/base/web/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nvideo-web-svc
spec:
  ports:
  - port: 80
    targetPort: 8000
    protocol: TCP
  selector:
    app: nvideo-web
